<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B234C"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/triviaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:text="Trivia"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/questionNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="Question: 1/20"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/triviaTextView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/questionCardView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#30396C"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionNumberTextView">

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:padding="5dp"
                android:text="@string/question"
                android:textColor="#FFFFFF" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/trueButton"
            style="@style/buttonStyle"
            android:layout_width="120dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/trueButton"
            android:textColor="#4CAF50"
            app:layout_constraintEnd_toStartOf="@+id/falseButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionCardView" />

        <Button
            android:id="@+id/falseButton"
            style="@style/buttonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="50dp"
            android:elevation="5dp"
            android:text="@string/falseButton"
            android:textColor="#D13E3E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/trueButton"
            app:layout_constraintTop_toBottomOf="@+id/questionCardView" />

        <Button
            android:id="@+id/nextButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/nextButton"
            app:layout_constraintEnd_toEndOf="@+id/falseButton"
            app:layout_constraintTop_toBottomOf="@+id/falseButton" />

        <Button
            android:id="@+id/previousButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="248dp"
            android:text="@string/previousButton"
            app:layout_constraintEnd_toEndOf="@+id/falseButton"
            app:layout_constraintHorizontal_bias="0.584"
            app:layout_constraintStart_toStartOf="@+id/trueButton"
            app:layout_constraintTop_toBottomOf="@+id/trueButton" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:fontFamily="monospace"
            android:text="@string/score"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trueButton" />

        <TextView
            android:id="@+id/bestScoreTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/bestScore"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="@+id/scoreTextView"
            app:layout_constraintTop_toBottomOf="@+id/scoreTextView" />

        <Button
            android:id="@+id/resetScoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#0F1430"
            android:text="@string/resetScore"
            app:layout_constraintEnd_toEndOf="@+id/scoreTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/scoreTextView"
            app:layout_constraintTop_toBottomOf="@+id/bestScoreTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>